--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-	"name": "fastro",
-	"version": "1.0.0",
-	"author": "Elvis Mao",
-	"license": "Apache-2.0",
+	"name": "frontend",
+	"type": "module",
 	"scripts": {
-		"dev:frontend": "pnpm --filter frontend dev",
-		"dev:backend": "pnpm --filter backend dev",
-		"dev": "concurrently \"pnpm dev:frontend\" \"pnpm dev:backend\"",
-		"format": "prettier --write .",
-		"check-format": "prettier --check .",
-		"build:frontend": "pnpm --filter frontend build"
+		"dev": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro"
 	},
-	"devDependencies": {
-		"concurrently": "^9.2.0",
-		"prettier": "3.6.2",
-		"prettier-plugin-astro": "^0.14.1",
-		"prettier-plugin-organize-imports": "^4.2.0"
+	"dependencies": {
+		"@astrojs/sitemap": "^3.5.1",
+		"astro": "^5.13.6",
+		"astro-i18n-aut": "^0.7.3"
 	},
-	"packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
+	"packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
 }
